<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/contentLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:fontFamily="@font/assistant"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:text="@string/welcome"
                    android:textSize="40sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/start_tracking"
                    android:textAlignment="center"
                    android:textSize="20sp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="200dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:background="@drawable/shape" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/ic_walk"
                    app:tint="@color/iconColor" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/editTextText4"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="4dp"
                        android:backgroundTint="@color/black"
                        android:ems="4"
                        android:inputType="number"
                        android:textAlignment="center" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="125dp"
                        android:layout_height="wrap_content"
                        android:text="@string/activity_time"
                        android:textStyle="bold" />

                </LinearLayout>

                <Button
                    android:id="@+id/button"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/button_add"
                    app:cornerRadius="5dp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />

            </LinearLayout>
        </ScrollView>

        <ListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="168dp"
            android:layout_weight="1" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/ic_run"
                app:tint="@color/iconColor" />

            <TextView
                android:id="@+id/textViewCalories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/stats_default"
                android:textSize="18sp"
                android:textStyle="bold"
                android:gravity="center"/>
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>